--- a/SpellChecker/app/src/main/res/values/strings.xml
+++ b/SpellChecker/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="sendButton">send</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_main22">Main2Activity2</string>
+    <string name="title_activity_about">About</string>
+    <string name="title_activity_about_page">aboutPage</string>
 </resources>
